The problem is the print for a mail msg is started when the first notification of the document (mail msg) is done loading. This is wrong because if the mail msg has attachments they may not be loaded and then the msgPrintEngine gets additional notification for when the attachments have started to load and since it has already started toprint error dialogs appear AND the attachments don't get printed. The solution here is to cache a pointer to the DOM Window for the msg(s) being printed. Then as the "stop" notifications come in we can ignore any documents (which would be the attachments) where the dom window doesn't match the msg's dom window. Then when they match which is the last notifiaction we can call print. The notification that comes thru where the docLoader is NULL means the previous document has completed printing and the engine should print the next msg. Bug 155430 r=cavin sr=kin